--- a/index.HTML.html
+++ b/index.HTML.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>पूजा कर्म</title>
+    <title>pooja karma</title>
     
     <link rel="stylesheet" href="Style.css.css">
     <link rel="stylesheet" media="screen and (max-width:946px)" href="style1.css.css">
